src/test/deca/syntax/invalid/test_synt18.deca
//Resultat:
//      Erreur syntaxique :  " de plus ligne 2
{
if ( 3.2=="hello""){
   println("this shouldn't be printed");
}
}
